--- a/build.xml
+++ b/build.xml
@@ -36,3 +36,17 @@
     <delete dir="${dist}"/>
   </target>
 </project>
+<target name="war" description="Bundles the application as a WAR file" depends="clean, build">
+    <mkdir dir="WebContent/WEB-INF/classes"/>
+     
+    <copy includeemptydirs="false" todir="WebContent/WEB-INF/classes">
+            <fileset dir="build/classes">
+            <include name="**/*.class"/>
+            </fileset>
+    </copy>
+     
+    <war destfile="UploadServlet30.war"
+        basedir="WebContent"
+        needxmlfile="false">
+    </war>
+</target>
